moved SDAT compare files over to this repo

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 .Ruserdata
 *.csv
 *.xlsx
+*.txt
+*.xls
 outputs/Positions_CLS_Adopted.html
 outputs/Positions_CLS_Adopted.md
 outputs/Positions_CLS_Adopted.Rmd
+*.html
